WAM-Studio-SF-Build/force-app/main/default/objects/AI_Agent_Run__c/AI_Agent_Run__c.object-meta.xml
<CustomObject>
    <description>Execution/audit log of an Agentforce agent invocation. Provenance hub. Part of Salesforce Wealth AI Studio.</description>
    <label>AI Agent Run</label>
    <nameField>
        <displayFormat>RUN-{000000}</displayFormat>
        <label>AI Agent Run Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AI Agent Runs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>