WAM-Studio-SF-Build/force-app/main/default/objects/AI_Agent_Run__c/fields/Agent_Name__c.field-meta.xml
<CustomField>
    <fullName>Agent_Name__c</fullName>
    <label>Agent Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>