WAM-Studio-SF-Build/force-app/main/default/objects/AI_Agent_Run__c/fields/Autonomous_Mode__c.field-meta.xml
<CustomField>
    <fullName>Autonomous_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autonomous Mode</label>
    <type>Checkbox</type>
</CustomField>