WAM-Studio-SF-Build/force-app/main/default/objects/AI_Agent_Run__c/fields/HITL_Status__c.field-meta.xml
<CustomField>
    <fullName>HITL_Status__c</fullName>
    <label>HITL Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Required</fullName>
                <default>true</default>
                <label>Not Required</label>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>