WAM-Studio-SF-Build/force-app/main/default/objects/AI_Agent_Run__c/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Advisor</fullName><default>true</default><label
        >Advisor</label></value>
            <value><fullName>Portfolio</fullName><default>false</default><label
        >Portfolio</label></value>
            <value><fullName>Service</fullName><default>false</default><label
        >Service</label></value>
            <value><fullName>Distribution</fullName><default
        >false</default><label>Distribution</label></value>
            <value><fullName>Compliance</fullName><default>false</default><label
        >Compliance</label></value>
            <value><fullName>Operations</fullName><default>false</default><label
        >Operations</label></value>
            <value><fullName>Executive</fullName><default>false</default><label
        >Executive</label></value>
            <value><fullName>Institutional</fullName><default
        >false</default><label>Institutional</label></value>
            <value><fullName>Partner</fullName><default>false</default><label
        >Partner</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>