WAM-Studio-SF-Build/force-app/main/default/objects/AI_Agent_Run__c/fields/Plan_Summary__c.field-meta.xml
<CustomField>
    <fullName>Plan_Summary__c</fullName>
    <label>Plan Summary</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>