WAM-Studio-SF-Build/force-app/main/default/objects/AI_Agent_Run__c/fields/Run_User__c.field-meta.xml
<CustomField>
    <fullName>Run_User__c</fullName>
    <label>Run User</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>AI Agent Runs</relationshipLabel>
    <relationshipName>AI_Agent_Runs</relationshipName>
    <type>Lookup</type>
</CustomField>