WAM-Studio-SF-Build/force-app/main/default/objects/AI_Agent_Run__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Running</fullName><default>true</default><label>Running</label></value>
            <value><fullName>Success</fullName><default>false</default><label>Success</label></value>
            <value><fullName>Failed</fullName><default>false</default><label>Failed</label></value>
            <value><fullName>Escalated</fullName><default>false</default><label>Escalated</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>